[Refactor] corrections in 5.2 redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/2. Estandares para las Redes de Area Local.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/2. Estandares para las Redes de Area Local.md
@@ -1,7 +1,9 @@
 ## Estándar IEEE 802 para Redes de Área Local
 
 Los protocolos definidos específicamente para la transmisión en redes LAN y MAN tratan cuestiones relacionadas con la transmisión de bloques de datos a través de la red. Según OSI, los protocolos de capas de red y superiores son independientes de la arquitectura de red y son aplicables a cualquier tipo de red. Así pues, el estudio de protocolos LAN está relacionado con las capas inferiores del modelo OSI.
+
 El IEEE 802 es un estándar que especifica la arquitectura de las redes LAN, funcionando como un modelo de referencia que ha sido adoptada por todas las organizaciones que trabajan en la especificación de los estándares LAN. Además, la capa física del modelo 802 incluye una especificación del medio de transmisión y de la topología. Generalmente, esto se considera por debajo de la capa inferior del modelo OSI. Sin embargo, dado que la elección del medio de transmisión y la topología es crítica en el diseño de redes LAN, se incluye una especificación del medio.
+
 Por encima de la capa física se encuentran las funciones asociadas a los servicios ofrecidos a los usuarios LAN. Entre ellas se encuentran las siguientes:
 
 1. En transmisión, ensamblado de datos en tramas con campos de dirección y de detección de errores.
@@ -9,7 +11,7 @@ Por encima de la capa física se encuentran las funciones asociadas a los servic
 3. Control de acceso al medio de transmisión LAN.
 4. Interfaz con las capas superiores, control de errores y de flujo.
 
-Estas funciones se asocian generalmente a la capa del enlace de datos, la cual de acuerdo al estándar se divide en dos subcapas. La capa de ***control de enlace lógico (LLC)*** que se encarga de brindar los servicios descritos en el último ítem, y la capa de ***control de acceso al medio (MAC)*** que se encarga de ofrecer el resto de prestaciones. Esta separación de funciones se debe a las siguientes razones:
+Estas funciones se asocian generalmente a la capa del enlace de datos, la cual de acuerdo al estándar se divide en dos sub capas. La capa de ***control de enlace lógico (LLC)*** que se encarga de brindar los servicios descritos en el último ítem, y la capa de ***control de acceso al medio (MAC)*** que se encarga de ofrecer el resto de prestaciones. Esta separación de funciones se debe a las siguientes razones:
 
 1. La lógica necesaria para la gestión del acceso a un medio compartido no se encuentra en esta capa de control de enlace de datos tradicional.
 2. Cada red LAN ofrece una forma distinta de trama MAC para el mismo LLC.
@@ -26,6 +28,7 @@ La capa de control de enlace lógico en redes LAN es similar en varios aspectos 
 2. La capa de control de acceso al medio lo descarga de algunos detalles del acceso al enlace físico.
 
 El direccionamiento en este caso implica la especificación de un origen y destino. Las direcciones que se utilizan en la capa de control de enlace lógico, se denominan ***puntos de acceso al servicio (SAP)***.
+
 El protocolo LLC brinda todos los [[4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos#Servicios de Transmisión|servicios de transmisión]] mencionados en la introducción a la capa de enlace de datos. Este protocolo es muy similar a HDLC, aun así poseen sus diferencias. En términos generales una trama estaría conformada de la siguiente manera:
 
 ![[formato-trama-llc.png]]
@@ -37,8 +40,10 @@ Los campos ***DSAP*** (Destination Service Access Point) y ***SSAP*** (Source Se
 
 ### Capa de Control de Acceso al Medio (MAC)
 
-Todas las LAN y MAN constan de un conjunto de dispositivos que deben compartir la capacidad de transmisión de la red, de manera que se requiere algún método de control de acceso al medio con objeto de hacer un uso eficiente de esta capacidad. Ésta es la función del protocolo de control de acceso al medio.
+Todas las LAN y MAN constan de un conjunto de dispositivos que deben compartir la capacidad de transmisión de la red, de manera que se requiere algún método de control de acceso al medio con objeto de hacer un uso eficiente de esta capacidad. Esta es la función del protocolo de control de acceso al medio.
+
 El control de los dispositivos al medio físico se puede realizar de forma centralizada o distribuida. A su vez la capa de control de acceso al medio debe encargarse de como se transmitirán los datos al medio, es decir, si se utilizan técnicas de transmisión síncronas o asíncronas.
+
 Esta capa recibe un bloque de datos de la capa superior (LLC) y debe realizar funciones relacionadas con el acceso al medio y la transmisión de datos. Para conseguir esto se encapsula todo el mensaje LLC en una trama, cuyo formato varían de acuerdo al protocolo MAC al que se haga referencia
 
 >[!tldr] Formato Genérico de Trama MAC
@@ -61,15 +66,18 @@ Esta capa recibe un bloque de datos de la capa superior (LLC) y debe realizar fu
 ### Acceso Múltiple con Detección de Portadora (CSMA)
 
 ***CSMA (Carrier Sense Multiple Access)*** es una técnica de acceso múltiple en la cual cuando una estación desea transmitir una trama, primero escucha el medio para detectar si hay alguna transmisión en curso (detección de portadora). Si el medio está ocupado, la estación espera, pero si está libre, transmite la trama. Sin embargo, si dos o más estaciones intentan transmitir al mismo tiempo, puede ocurrir una colisión, debido a que la señal portadora no ha logrado propagarse lo suficientemente rápido. Para gestionar este riesgo, la estación espera una confirmación tras la transmisión. Si no recibe la confirmación luego de cierto tiempo se asume que hubo una colisión y se retransmite la trama.
+
 La principal desventaja de CSMA es que, a pesar de reducir la probabilidad de colisiones, todavía pueden ocurrir colisiones, especialmente si varias estaciones intentan transmitir simultáneamente. Variantes como CSMA p-persistente pueden manejar cuidadosamente el valor de $p$ para evitar inestabilidades bajo alta carga, donde las colisiones repetidas pueden llevar a una caída significativa del rendimiento.
 
 ### Acceso Múltiple con Detección de Portadora con Detección de Colisiones (CSMA/CD)
 
 ***CSMA/CD (Carrier Sense Multiple Access with Collision Detection)*** es una versión mejorada de CSMA que permite a una estación transmitir solo si detecta que el medio está libre. Si el medio está ocupado, la estación espera. Si durante la transmisión se detecta una colisión, la estación envía una señal de interferencia para notificar a todas las estaciones de la colisión y detiene la transmisión. Luego, la estación espera un tiempo aleatorio antes de intentar retransmitir. Esta técnica reduce el tiempo desaprovechado al tiempo necesario para detectar una colisión, lo que mejora la eficiencia del uso del canal.
+
 La principal desventaja de CSMA/CD es que, si bien minimiza el tiempo perdido por colisiones, todavía puede experimentar inestabilidad en situaciones de alta carga, especialmente si se utilizan tramas cortas en comparación con el retardo de propagación. Para mitigar esto, se utiliza la técnica de ***espera exponencial binaria*** en redes como Ethernet, donde el tiempo de espera aumenta exponencialmente con cada intento fallido, ayudando a evitar que las colisiones repetidas lleven a la congestión de la red.
 
 >[!tldr] Espera o Retroceso Exponencial Binario
 >Cuando una estación en la red detecta una colisión, detiene inmediatamente la transmisión de datos y emite una señal de jamming para alertar a todas las demás estaciones sobre la colisión. Para evitar nuevas colisiones al retransmitir las tramas, se emplea la técnica de espera exponencial binaria.
+>
 >Después de una colisión, la estación espera un tiempo antes de intentar retransmitir los datos. Este tiempo de espera es aleatorio y se determina a partir de la _**ventana de contención**_, que consiste en pequeños intervalos de tiempo (slots) definidos por la red. Con cada colisión adicional, el tamaño de la ventana de contención se incrementa, y la estación selecciona aleatoriamente el número de slots que deberá esperar antes de intentar transmitir de nuevo.
 
 ## Ethernet
@@ -78,7 +86,9 @@ Las redes LAN de alta velocidad más ampliamente utilizadas en la actualidad son
 
 >[!tldr] Slot Time
 >En las redes Ethernet, el ***slot time*** es la cantidad de tiempo que toma la transmisión de una trama mínima de 512 bits. Es un parámetro crucial en el funcionamiento del protocolo CSMA/CD.
+>
 >El slot time se establece generalmente en 51,2 microsegundos para garantizar que una estación de red pueda detectar una colisión antes de terminar de enviar la trama completa. Esta decisión se basa en la necesidad de facilitar la detección de colisiones y asegurar que las tramas se transmitan correctamente a través del enlace. Además, el slot time ayuda a establecer el tamaño mínimo de las tramas que se pueden transmitir, garantizando una correcta propagación de la señal en la red.
+>
 >El tamaño mínimo de las tramas puede variar de acuerdo a la capacidad del enlace: a mayor capacidad, mayor será el tamaño mínimo de la trama para respetar el slot time.
 
 El formato normal de una trama Ethernet está compuesta por los siguientes campos:
@@ -103,7 +113,9 @@ En la especificación IEEE 802 no solo se especifican los distintos protocolos y
 - **10BASE-T**: Utiliza par trenzado no apantallado en una topología en estrella. Dada la alta velocidad y la baja calidad de las transmisiones sobre este tipo de cable, la longitud de cada enlace se restringe a 100 m. Como alternativa se puede utilizar un enlace de fibra óptica, en cuyo caso la longitud máxima es de 500 m.
 - **10BASE-F**: Contiene tres especificaciones: una topología en estrella pasiva para la interconexión de estaciones y repetidores con segmentos de hasta 1 km de longitud; un enlace punto a punto que puede ser usado para conectar estaciones o repetidores separados hasta 2 km; y un enlace punto a punto que puede usarse para conectar repetidores a una distancia máxima de 2 km.
 
-Además de estas alternativas, existen varias versiones que funcionan a 100 Mbps, 1 Gbps y 10 Gbps. Todas las opciones 100BASE-T usan el protocolo MAC y el formato de la trama Ethernet. Mientras que 100BASE-X identifica al conjunto de opciones que usan las especificaciones del medio físico definidas originalmente para ***FDDI (Fiber Distributed Data Interface)***. Todos los esquemas 100BASE-X emplean dos enlaces físicos entre los nodos, uno para transmisión y otro para recepción, este tipo de redes pueden hacer uso de *pares trenzados apantallados (STP)* o *pares trenzados no apantallados (UTP)* de alta calidad (categoría 5), mientras que 100BASE-FX hace uso de fibra óptica. Por otro lado, 100BASE-T4 define una alternativa menos costosa que puede utilizar UTP de voz de categoría 3 además de UTP de categoría 5 de alta calidad. Para alcanzar los 100 Mbps en cables de baja calidad, 100BASE-T4 especifica el uso de 4 líneas de par trenzado entre los nodos, de los cuales tres se usan simultáneamente para la transmisión de datos en una dirección.
+Además de estas alternativas, existen varias versiones que funcionan a 100 Mbps, 1 Gbps y 10 Gbps. Todas las opciones 100BASE-T usan el protocolo MAC y el formato de la trama Ethernet. Mientras que 100BASE-X identifica al conjunto de opciones que usan las especificaciones del medio físico definidas originalmente para ***FDDI (Fiber Distributed Data Interface)***. 
+
+Todos los esquemas 100BASE-X emplean dos enlaces físicos entre los nodos, uno para transmisión y otro para recepción, este tipo de redes pueden hacer uso de *pares trenzados apantallados (STP)* o *pares trenzados no apantallados (UTP)* de alta calidad (categoría 5), mientras que 100BASE-FX hace uso de fibra óptica. Por otro lado, 100BASE-T4 define una alternativa menos costosa que puede utilizar UTP de voz de categoría 3 además de UTP de categoría 5 de alta calidad. Para alcanzar los 100 Mbps en cables de baja calidad, 100BASE-T4 especifica el uso de 4 líneas de par trenzado entre los nodos, de los cuales tres se usan simultáneamente para la transmisión de datos en una dirección.
 
 ![[especificacion-fisica-ethernet.png]]
 
@@ -119,6 +131,9 @@ Cada una de estas especificaciones está diseñada para diferentes entornos y ne
 ## Token Ring
 
 Las redes ***Token Ring*** funcionan mediante un mecanismo en el cual un pequeño paquete especial llamado ***token*** circula continuamente por un anillo de dispositivos conectados. En esta topología, cada dispositivo está conectado a dos otros dispositivos formando un anillo cerrado, donde los datos se transmiten secuencialmente, bit a bit, alrededor del anillo. Cada dispositivo actúa como un repetidor, regenerando y retransmitiendo cada bit que recibe para garantizar que los datos lleguen a su destino sin degradación.
+
 El funcionamiento básico de una red Token Ring se basa en el uso del token para el control de acceso al medio. Solo la estación que captura el token puede transmitir datos. Cuando una estación quiere transmitir, debe esperar a que le llegue el token. Al recibir el token, la estación lo toma y lo convierte en el comienzo de su trama de datos. Luego, la estación transmite sus datos alrededor del anillo, y estos circulan por el anillo hasta llegar al dispositivo destinatario. El dispositivo destinatario copia los datos y, dependiendo del protocolo, marca el paquete como recibido. El token se libera nuevamente en el anillo una vez que la estación emisora ha terminado de transmitir, permitiendo que otra estación pueda usarlo para enviar sus datos. Este mecanismo asegura un acceso equitativo al medio, evitando colisiones al garantizar que solo una estación transmita a la vez.
+
 Los repetidores en un anillo Token Ring tienen dos estados principales: el estado de escucha y el estado de transmisión. En el estado de escucha, el repetidor retransmite los datos que recibe, mientras que en el estado de transmisión, retransmite los datos de la estación a la que está conectado. Existe también un tercer estado, conocido como cortocircuito (bypass), que permite que las señales propagadas atraviesen el repetidor sin retraso, mejorando las prestaciones y proporcionando una solución parcial al problema de fiabilidad.
+
 El sistema requiere mecanismos de mantenimiento, como la supervisión de la existencia del token para asegurar que siempre haya uno en circulación y que no haya duplicados, lo cual es crítico para el funcionamiento correcto de la red.
